--- a/back-dotnetcore-rest-api/back-dotnetcore-rest-api.csproj
+++ b/back-dotnetcore-rest-api/back-dotnetcore-rest-api.csproj
@@ -5,5 +5,10 @@
     <RootNamespace>back_dotnetcore_rest_api</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.2" />
+  </ItemGroup>
+
 
 </Project>
